--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -9,20 +9,20 @@
 <table border='1' width='100%'>
 <tr valign='top'>
 <td>1 test</td>
-<td><a target='mainFrame' href='classes.html'>6 classes</a></td>
-<td>51 methods:<br/>
+<td><a target='mainFrame' href='classes.html'>1 class</a></td>
+<td>8 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (6)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (2)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>0 group</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>testAll (23/28/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>testAll (8/0/0)</td><td valign='top' align='right'>
   <a href='testAll.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
