--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -10,10 +10,10 @@
 <tr valign='top'>
 <td>1 test</td>
 <td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>8 methods:<br/>
+<td>4 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (2)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>0 group</a></td>
@@ -22,8 +22,8 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>testAll (8/0/0)</td><td valign='top' align='right'>
-  <a href='testAll.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>test_android_V170928 (4/0/0)</td><td valign='top' align='right'>
+  <a href='test_android_V170928.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
