--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,40 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69bbb7">  <td>17/09/28 14:05:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitAppium.beforeSuite()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:06:18</td>   <td>39150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:06:18</td>   <td>39166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.morningPaper()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">morningPaper</td> 
-  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:06:29</td>   <td>50705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:06:29</td>   <td>50728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.searchByInputChinese()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">searchByInputChinese</td> 
-  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:07:10</td>   <td>91404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:07:10</td>   <td>91431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.searchByInputEnglish()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">searchByInputEnglish</td> 
-  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:08:06</td>   <td>147076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:08:06</td>   <td>147087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.searchByHistory()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">searchByHistory</td> 
-  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:08:55</td>   <td>196795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:08:55</td>   <td>196807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.clearSearchedHistory()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">clearSearchedHistory</td> 
-  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:09:28</td>   <td>229524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:09:28</td>   <td>229533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.autoMenuEdit()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">autoMenuEdit</td> 
-  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:11:40</td>   <td>361639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:11:40</td>   <td>361653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.changeTopMenus()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">changeTopMenus</td> 
-  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:12:07</td>   <td>388947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>17/09/28 14:12:07</td>   <td>388964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.changeToVideos()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">changeToVideos</td> 
-  <td>main@733957003</td>   <td></td> </tr>
-<tr bgcolor="69bbb7">  <td>17/09/28 14:12:21</td>   <td>402715</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitAppium.afterClass()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@68bbe345]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="9f73a2">  <td>17/10/10 09:53:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitAppium.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/10 09:54:33</td>   <td>40090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LocalTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/10 09:54:33</td>   <td>40124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.location()[pri:1, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">location</td> 
+  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/10 09:54:54</td>   <td>61433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LocalTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/10 09:54:54</td>   <td>61455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.dislike()[pri:2, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">dislike</td> 
+  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/10 10:20:16</td>   <td>1583259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LocalTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/10 10:20:16</td>   <td>1583298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.refreshByKeyword()[pri:3, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">refreshByKeyword</td> 
+  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/10 10:22:28</td>   <td>1715941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LocalTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/10 10:22:29</td>   <td>1715964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.readingMore()[pri:4, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">readingMore</td> 
+  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="9f73a2">  <td>17/10/10 10:23:11</td>   <td>1758882</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitAppium.afterClass()[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
 </table>
