--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,24 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f73a2">  <td>17/10/10 09:53:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitAppium.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>17/10/10 09:54:33</td>   <td>40090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LocalTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>17/10/10 09:54:33</td>   <td>40124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.location()[pri:1, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">location</td> 
-  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>17/10/10 09:54:54</td>   <td>61433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LocalTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>17/10/10 09:54:54</td>   <td>61455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.dislike()[pri:2, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">dislike</td> 
-  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>17/10/10 10:20:16</td>   <td>1583259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LocalTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>17/10/10 10:20:16</td>   <td>1583298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.refreshByKeyword()[pri:3, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">refreshByKeyword</td> 
-  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>17/10/10 10:22:28</td>   <td>1715941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LocalTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>17/10/10 10:22:29</td>   <td>1715964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.readingMore()[pri:4, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">readingMore</td> 
-  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="9f73a2">  <td>17/10/10 10:23:11</td>   <td>1758882</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitAppium.afterClass()[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@396f6598]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="9f73a2">  <td>17/10/12 09:35:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitAppium.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.yiibai.primera.testng.cases.LocalTest@78e67e0a]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2070529722</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/12 09:35:17</td>   <td>5078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.location()[pri:1, instance:com.yiibai.primera.testng.cases.LocalTest@78e67e0a]">location</td> 
+  <td>main@2070529722</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/12 09:35:17</td>   <td>5087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.dislike()[pri:2, instance:com.yiibai.primera.testng.cases.LocalTest@78e67e0a]">dislike</td> 
+  <td>main@2070529722</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/12 09:35:17</td>   <td>5092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.refreshByKeyword()[pri:3, instance:com.yiibai.primera.testng.cases.LocalTest@78e67e0a]">refreshByKeyword</td> 
+  <td>main@2070529722</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/10/12 09:35:17</td>   <td>5095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocalTest.readingMore()[pri:4, instance:com.yiibai.primera.testng.cases.LocalTest@78e67e0a]">readingMore</td> 
+  <td>main@2070529722</td>   <td></td> </tr>
 </table>
